# global-command

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test.txt
src/: main.cpp
src/ui/: package-lock.json  package.json
src/ui/src/: App.tsx  index.css
src/ui/src/components/: ResultComponent.tsx
src/utils/: utils.cpp  utils.h
src/webview/: webview.cpp  webview.h
